# comfyui-diffusion-cg

./: README.md  __init__.py  nodes.py  normalization.py  pyproject.toml  recenter.py  recenter_xl.py  tensor_debug.py
.github/workflows/: publish.yml
workflows/: sd1.5.json  sdxl.json
