[project]
name = "comfyui-diffusion-cg"
description = "Color Grading for Stable Diffusion"
version = "1.0.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-diffusion-cg"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Diffusion CG"
Icon = ""
